[package]
name = "example"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[dependencies]
gl = "0.6.1"
glutin = "0.6.1"

[dependencies.gl_context]
git = "https://github.com/nathanfaucett/rs-gl_context.git"

[dependencies.geometry]
git = "https://github.com/nathanfaucett/rs-geometry.git"

[dependencies.vector]
git = "https://github.com/nathanfaucett/rs-vector.git"

[dependencies.gl_geometry]
path = ".."
