[package]
name = "example"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

[dependencies]
gl = "0.6.1"
glutin = "0.7.0"

gl_context = {git = "https://github.com/nathanfaucett/rs-gl_context.git"}
geometry = {git = "https://github.com/nathanfaucett/rs-geometry.git"}
vector = {git = "https://github.com/nathanfaucett/rs-vector.git"}
gl_geometry = {path = ".."}
